<?xml version="1.0" encoding="utf-8"?>

<!--FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewpage.PlayingFragment"-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="playModel"
            type="com.tencent.mm.ui.viewpage.PlayingViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_ripple"
        android:descendantFocusability="afterDescendants"
        tools:context=".ui.viewpage.PlayingFragment">


        <ImageView
            android:id="@+id/nextPlayImageView2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:background="@drawable/view_elevation"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:song="@{playModel.songNext2}"
            android:visibility="@{playModel.nextSong(1) ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/nextPlayImageView"
            app:layout_constraintEnd_toEndOf="@+id/nextPlayImageView"
            app:layout_constraintStart_toStartOf="@+id/nextPlayImageView"
            app:layout_constraintTop_toTopOf="@+id/nextPlayImageView" />

        <ImageView
            android:id="@+id/nextPlayImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/view_elevation"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:song="@{playModel.songNext}"
            android:visibility="@{playModel.nextSong(0) ? View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/playingImageView"
            app:layout_constraintEnd_toEndOf="@+id/playingImageView"
            app:layout_constraintStart_toStartOf="@+id/playingImageView"
            app:layout_constraintTop_toTopOf="@+id/playingImageView" />


        <ImageView
            android:id="@+id/playingImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/view_elevation"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:onClick="@{playModel::switchPlayMode}"
            android:song="@{playModel.song}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songTitle2TextView" />

        <TextView
            android:id="@+id/songTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/white_ripple"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:text="@{playModel.song.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="testestsetsetsetsettestestsetestsetse" />

        <TextView
            android:id="@+id/songTitle2TextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/view_background2"
            android:ellipsize="end"
            android:maxLength="25"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingTop="3dp"
            android:paddingRight="8dp"
            android:paddingBottom="3dp"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="30"
            android:text="@{playModel.song.artist.name + '-' + playModel.song.album.title}"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/songTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/songTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/songTitleTextView"
            tools:text="testestsetsetsetsettestestsetestsetse" />

        <ImageView
            android:id="@+id/playImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/white_ripple"
            android:clickable="true"
            android:contentDescription="@string/playing"
            android:focusable="true"
            android:onClick="@{playModel::playSong}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playingImageView"
            app:srcCompat="@drawable/ic_play_arrow_black_48dp" />

        <ImageView
            android:id="@+id/nextImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/white_ripple"
            android:clickable="true"
            android:contentDescription="@string/next_play"
            android:focusable="true"
            android:onClick="@{playModel::nextSong}"
            app:layout_constraintStart_toEndOf="@+id/playImageView"
            app:layout_constraintTop_toTopOf="@+id/playImageView"
            app:srcCompat="@drawable/ic_skip_next_black_48dp" />

        <ImageView
            android:id="@+id/perImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/white_ripple"
            android:clickable="true"
            android:contentDescription="@string/previous_play"
            android:focusable="true"
            android:onClick="@{playModel::preSong}"
            app:layout_constraintEnd_toStartOf="@+id/playImageView"
            app:layout_constraintTop_toTopOf="@+id/playImageView"
            app:srcCompat="@drawable/ic_skip_previous_black_48dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--/FrameLayout-->

</layout>